<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_band_name">Enter Artist/Band Name</string>
    <string name="title_activity_tracks">Top 10 Tracks</string>
    <string name="title_activity_player">Player</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="track_name">Track Name</string>
    <string name="start_text">0:00</string>
    <string name="end_text">0:30</string>
    <string name="country_code">Country Code</string>
    <string name="notifications">Notifications</string>
    <string name="loading">Loading...</string>
</resources>
